--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "react-dom": "^16.8.4"
     },
     "dependencies": {
-        "react-router-dom": "^4.3.1"
+        "react-redux": "^6.0.1",
+        "react-router-dom": "^4.3.1",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0"
     }
 }
